# spilsnet-torch

./: .gitignore  CITATION.cff  GNN_FEM_GUIDE.md  README.md  config_gnn_fem.py  pyproject.toml  test.py  test_gnn_fem.py
.github/workflows/: publish.yml  python-package.yml  tests.yml
spilsnet/: __init__.py  models.py  utils.py  wrapper.py
tests/: conftest.py  test_core.py  test_import.py  test_integration_compatibility.py  test_wrapper_logic.py
